Fixed contact section layout issue

--- a/app/pages/contact/contact.module.scss
+++ b/app/pages/contact/contact.module.scss
@@ -2,23 +2,25 @@
 @use "../../scss/globals.scss" as mq;
 
 .contact__section {
-  height: 100%;
+  height: 120vh;
   width: 100%;
   background-color: clr.$light-green;
   color: clr.$black;
   font-family: "GeneralSans-Regular";
-  padding: 12rem 7rem 4rem;
+  padding: 18rem 7rem 18rem;
+
   position: relative;
 
   @include mq.desktopXL {
-    padding: 12rem 3rem 4rem;
+    padding: 18rem 3rem 18rem;
   }
   @include mq.tabletS {
-    padding: 12rem 1.5rem 6rem;
+    padding: 18rem 1.5rem 18rem;
   }
 
   .contact__h1 {
     font-size: 8rem;
+
     font-family: "Brown-Sugar";
 
     @include mq.desktopXS {
